--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 locale                   : "en-US"
 title                    : "Shibesh Kumar Jas Pacif"
 title_separator          : "-"
-name                     : &name "Shibesh Kumar Jas Pacif
+name                     : &name "Shibesh Kumar Jas Pacif"
 description              : &description "Assistant Professor (Senior), Department of Mathematics, School of Advanced Sciences, Vellore Institute of Technology, Vellore"
 url                      : "https://quantumagic.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
