--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ title                    : "Dr.Shibesh Kumar Jas Pacif"
 title_separator          : "-"
 name                     : &name "Dr.Shibesh Kumar Jas Pacif"
 description              : &description "Assistant Professor (Senior), Department of Mathematics, School of Advanced Sciences, Vellore Institute of Technology, Vellore"
-url                      : "https://quantumagic.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://shibeshkumar.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "quantumagic.github.io"
+repository               : "shibeshkumar.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
