--- a/_config.yml
+++ b/_config.yml
@@ -96,7 +96,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "quantumagic"
+  github           : "shibeshkumar"
   google_plus      :
   arxiv            : "http://arxiv.org/a/pacif_s_1"
   instagram        :
